tests/paczka1/fuzzy1/20402159.err
Error in line 9: XFU2p4TRRL8 A584 87,7
Error in line 10: XFU2p4TRRL8 A561 5,6
Error in line 8: wx4Qw A561 0,0
Error in line 26: pfKSJ A561 64,5
Error in line 28: pfKSJ A584 91,8
Error in line 32: wx4Qw A561 64,2
